--- a/applications/dashboard/scss/_nav.scss
+++ b/applications/dashboard/scss/_nav.scss
@@ -220,7 +220,7 @@
   flex-direction: column;
   align-items: center;
   line-height: 1;
-  padding: $spacer $spacer * 2 0 0 ;
+  padding: $spacer $spacer 0 $spacer ;
   color: rgba(25,25,25,0.20);
 }
 
